# GPGPUSpeedupGuidelines

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.githooks/: pre-commit
.github/: pull_request_example.md
.github/scripts/: install_cuda.sh  install_intel_opencl.sh
.github/workflows/: cmake.yml
docs/: 101_how_to_profile.markdown  102_how_to_sanitize.markdown  103_sum.markdown  104_sum_local_reduction_races.markdown  105_sum_local_reduction_out_of_bounds.markdown  106_sum_local_reduction_profiling.markdown  111_vulkan_slow_vram_to_ram.markdown  112_two_threads.markdown  113_camera_to_world_to_camera.markdown  114_transform_approximation.markdown
libs/: CMakeLists.txt
libs/gpu/libgpu/cuda/cu/: opencl_translator.cu
libs/images/libimages/: images.cpp
libs/utils/: CMakeLists.txt
src/: main.cpp  main01_aplusb.cpp  main52_sum.cpp  main53_sum_local_reduction.cpp
src/cl/: 01_aplusb.cl  52_sum.cl  53_sum_local_reduction.cl  aplusb.cl  clion_defines.cl
src/cu/: 01_aplusb.cu  52_sum.cu  53_sum_local_reduction.cu
